# uav26

./: .gitignore  .gitmodules  260428.md  260429_world.md  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  compose.yml  report_260429_line_tracer.md  report_260429_world.md
docs/: MISSION_INTERFACE.md  PROGRESS.md  SIM_TO_REAL.md  mission_skeleton.py
docs/progress/: docker.md  fc_core.md  fc_sim.md  line_tracer.md  tools.md  world.md
scripts/: dev.sh  gain_sweep.py  plot_mission.py  plot_waypoint.py  run_mission.sh  x11_bridge.py
src/fc_core/: CMakeLists.txt  package.xml
src/fc_core/include/fc_core/: controller.h  filter.h  imu.h  lidar.h  linalg.h  mission_ctrl.h  planner.h  protocol.h  sbus.h
src/fc_core/src/: controller.c  filter.c  imu_parse.c  lidar_parse.c  linalg.c  mission_ctrl.c  planner.c  protocol.c  sbus_parse.c
src/fc_core/test/: test_allocation.cpp  test_atti_pid.cpp  test_mission_ctrl.cpp  test_protocol.cpp  test_quat.cpp  test_rate_pid.cpp
src/fc_sim/: CMakeLists.txt  package.xml
src/fc_sim/launch/: fc_sim.launch.py  flight_demo.launch.py  hover_demo.launch.py  teleop.launch.py  waypoint_demo.launch.py
src/fc_sim/scripts/: flight_demo_pub.py  hover_pub.py  teleop_pub.py  waypoint_demo_pub.py
src/fc_sim/src/: fc_sim_node.cpp
src/fc_sim_msgs/: CMakeLists.txt  package.xml
src/fc_sim_msgs/msg/: McuCommand.msg  Setpoint.msg  Telemetry.msg
src/line_tracer/: README.md  package.xml  setup.cfg  setup.py
src/line_tracer/config/: params.yaml
src/line_tracer/launch/: line_tracer.launch.py
src/line_tracer/line_tracer/: dead_reckoning.py  geom.py  grid.py  line_tracer_node.py  mission.py  mission_adapter.py  mission_interface.py  perception.py  planner.py  side_camera.py  state_machine.py
src/line_tracer/scripts/: record_debug_video.py
src/line_tracer/test/: test_dead_reckoning.py  test_front_hint.py  test_geom.py  test_grid.py  test_intersection.py  test_mission.py  test_mission_adapter.py  test_mission_closed_loop.py  test_mission_interface.py  test_perception.py  test_planner.py  test_side_camera.py  test_state_machine.py
src/line_tracer_msgs/: CMakeLists.txt  package.xml
src/line_tracer_msgs/srv/: SetState.srv
src/world/: CMakeLists.txt  package.xml
src/world/config/: aruco_layout.yaml  bridge.yaml
src/world/launch/: sim.launch.py
src/world/mesh/: grid_30x20_t0.10_cell4.stl  grid_4x4_t0.1_cell0.5_beam0.05.stl
src/world/models/uav26_quad/: model.config  model.sdf
src/world/models/world_assets/: model.config  model.sdf
src/world/script/: aruco.py  floor_tex.py  grid_stl.py  marker_randomize.py
src/world/worlds/: competition.sdf
