<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fc_core</name>
  <version>0.1.0</version>
  <description>
    Pure C flight-controller core ported from the UAV26 STM32G431 firmware.
    No ROS or HAL dependencies; same controller math runs in Gazebo (fc_sim)
    and on the real STM32. Includes attitude/rate PID cascade, mixer,
    altitude ESKF, IMU/SBUS/Micolink frame parsers, and the companion-FC
    binary protocol codec.
  </description>

  <maintainer email="noreply@todo.todo">Dongha Gwak</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
